# home-ops

./: .gitignore  LICENSE  README.md  backup.sh  renovate.json
apps/vaultwarden/: include.txt
apps/vaultwarden/docker/: docker-compose.yaml
compose/dozzle/: docker-compose.yaml
compose/journiv/: docker-compose.yaml  env.template
compose/papra/: docker-compose.yaml
compose/redlib/: docker-compose.yaml
compose/traefik/: docker-compose.yaml
compose/youtrack/: README.md  docker-compose.yaml
stacks/h610i/: docker-compose.yaml
stacks/h610i/caddy/: Dockerfile  docker-compose.yaml
stacks/h610i/garage/: docker-compose.yaml  example.env
stacks/h610i/immich/: docker-compose.yaml
stacks/h610i/monitoring/: docker-compose.yaml
stacks/m700/: .justfile  Justfile  README.md  crontab  docker-compose.yaml  example.backup.env  example.env  example.ops.env  example.vaultwarden.env
stacks/m700/davis/: Justfile  README.md  backup-restic.nu  backup.nu  backup.py  backup.sh  docker-compose.backup.yaml  docker-compose.yaml  example.env  prepare_backup_data.nu  prepare_backup_data.py  prepare_backup_data.sh  pyproject.toml  test.py
stacks/m700/davis/backup/: backup.nu  compose.local.yaml  compose.offsite.yaml  compose.onsite.yaml  compose.s3.yaml  restic-backup.nu  restic-compose.nu  workflow-backup.nu
stacks/m700/davis/backup2/: backup.nu  backup2.nu  compose.local.yaml  compose.offsite.yaml
stacks/vps/: Caddyfile  Dockerfile  docker-compose.yaml  example.env
workloads/m700/: Justfile  crontab  docker-compose.yaml  example.common.env  example.env
(+301 files in other folders)
